<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:id="@+id/sky_image"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:transitionName="sky_image" />

    <LinearLayout
        android:id="@+id/main_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sky_image"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:alpha="0"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:stretchColumns="*">

            <TableRow>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/temperature_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        android:gravity="left"
                        android:text="@string/temperature_header"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/temperature_header">

                        <TableRow android:gravity="left">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0"
                                android:text="Мін."
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tempMin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0"
                                android:text="@string/temperature_celcium"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow android:gravity="left">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0"
                                android:text="Макс."
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tempMax"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0"
                                android:text="@string/temperature_celcium"
                                android:textSize="16sp" />
                        </TableRow>
                    </TableLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pressure_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        android:gravity="center"
                        android:text="@string/pressure_header"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pressure_header">

                        <TableRow android:gravity="center">

                            <TextView
                                android:id="@+id/pressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0"
                                android:text="@string/pressure"
                                android:textSize="16sp" />

                        </TableRow>
                    </TableLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/humidity_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        android:gravity="right"
                        android:text="@string/humidity_header"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/humidity_header">

                        <TableRow android:gravity="right">

                            <TextView
                                android:id="@+id/humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0"
                                android:text="%"
                                android:textSize="16sp" />
                        </TableRow>
                    </TableLayout>
                </RelativeLayout>
            </TableRow>

            <TableRow>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/wind_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        android:gravity="left"
                        android:text="@string/wind_header"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wind_header">

                        <TableRow android:gravity="left">

                            <TextView
                                android:id="@+id/wind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0"
                                android:text="@string/wind_speed"
                                android:textSize="16sp" />
                        </TableRow>
                    </TableLayout>
                </RelativeLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>